# ghostkeys

./: .gitignore  Cargo.toml  Makefile.toml  README.md  legacy_delegates.toml  rust-toolchain.toml
.claude/rules/: delegate-migration.md
.github/workflows/: check-migration.yml
common/: Cargo.toml  README.md
common/src/: lib.rs
delegates/ghostkey-delegate/: Cargo.toml
delegates/ghostkey-delegate/src/: handlers.rs  lib.rs  logging.rs  permissions.rs
delegates/ghostkey-delegate/tests/: integration_test.rs
published-contract/: contract-id.txt  webapp.parameters
scripts/: add-migration.sh  check-migration.sh  generate-import-url.sh  record-migration.sh
ui/: Cargo.toml  Dioxus.toml  build.rs
ui/assets/: style.css
ui/src/: auto_import.rs  main.rs  migration.rs
ui/src/api/: connection.rs  delegate.rs  mod.rs  state.rs
ui/src/components/: ghostkey_import.rs  ghostkey_list.rs  ghostkey_sign.rs  mod.rs  toast.rs
