[workspace]
members = [
    "common",
    "delegates/ghostkey-delegate",
    "ui",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/ghostkeys"

[workspace.dependencies]
ghostkey-common = { path = "common" }
ghostkey_lib = "0.2"
freenet-stdlib = "0.6"
ed25519-dalek = { version = "2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
blake3 = "1"
bs58 = "0.5"
getrandom = { version = "0.2", features = ["custom"] }
serde_json = "1"
chrono = "0.4"
dioxus = { version = "=0.7.3", features = ["web"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement", "HtmlElement", "FileReader", "FileList", "File", "Blob", "BlobPropertyBag", "Url", "Storage"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# `strip = true` removes debug symbols and source-path metadata from
# the WASM binary. This is what makes the build byte-reproducible
# across machines: without it, embedded paths and stack-trace info
# differ between local dev and CI, producing divergent WASM hashes
# (and therefore different delegate keys). River and Delta both pin
# this for the same reason.
strip = true

# Apply size+reproducibility optimisations to dependencies too, so a
# Cargo.lock change in a leaf crate doesn't accidentally bloat the
# delegate WASM via a release-profile mismatch.
[profile.release.package."*"]
opt-level = "z"
