[package]
name = "ghostkey-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for the ghostkey delegate and UI"

[dependencies]
ghostkey_lib = { workspace = true }
freenet-stdlib = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
