[package]
name = "ghostkey-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for the ghostkey delegate and UI"

[features]
default = []
# Enable crypto operations (fingerprint computation, etc.)
crypto = ["dep:ed25519-dalek", "dep:blake3", "dep:bs58"]

[dependencies]
freenet-stdlib = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }

# Optional crypto deps (needed by delegate, not by UI)
ed25519-dalek = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
