[package]
name = "ghostkey-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire types for communicating with the Freenet ghostkey delegate (GhostkeyRequest/GhostkeyResponse). Use this crate from a Freenet dapp that needs to sign messages or read ghostkey identity info via the delegate. For low-level ghostkey certificate crypto, see ghostkey_lib instead."
readme = "README.md"
keywords = ["freenet", "ghostkey", "delegate"]
categories = ["cryptography"]

[features]
default = []
# Enable crypto operations (fingerprint computation, etc.)
crypto = ["dep:ed25519-dalek", "dep:blake3", "dep:bs58"]

[dependencies]
freenet-stdlib = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }

# Optional crypto deps (needed by delegate, not by UI)
ed25519-dalek = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
