[package]
name = "ghostkey-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ghostkey management UI for Freenet"

[features]
default = []
example-data = []
no-sync = []

[dependencies]
ghostkey-common = { workspace = true }
freenet-stdlib = { workspace = true, features = ["net"] }
dioxus = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-timers = { workspace = true }
futures = { workspace = true }
